--- a/index.html
+++ b/index.html
@@ -4,26 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Are you worthy</title>
     <link rel="stylesheet" href="style.css">
+    <title>Cool Bro</title>
 </head>
 <body>
-    <header>
-        <h1 class="title">Are You Worthy?</h1>
-    </header>
-    <form action="">
-        <div class="q1">
-            <h1>Are you ready to take on the test?</h1>
-            <input class="button right" type="button" value="Yes">
-            <input class="button wrong" type="button" value="No">
-        </div>
-        <div class="q2">
-            <h1>Do you want to shake my hand?</h1>
-            <input class="button right" type="button" value="Yes">
-            <input class="button wrong" type="button" value="No">
-        </div>
-    </form>
-<script src="https://code.jquery.com/jquery-3.6.4.slim.js" integrity="sha256-dWvV84T6BhzO4vG6gWhsWVKVoa4lVmLnpBOZh/CAHU4=" crossorigin="anonymous"></script>
-<script src="script.js"></script>
+    <canvas class="canvas" width="300px" height="500px"></canvas>
+    <script src="script.js"></script>
 </body>
 </html>
