--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Cool Bro</title>
 </head>
 <body>
-    <canvas class="canvas" width="300px" height="500px"></canvas>
+    <canvas class="canvas"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
